fix run script, dont skip repos, re-run

--- a/data/output/core-projects.json
+++ b/data/output/core-projects.json
@@ -47,11 +47,10 @@
       "1OT2OD030545-01",
       "3OT2OD030545-01S4",
       "3OT2OD030545-01S3",
-      "3OT2OD030545-01S2",
       "3OT2OD030545-01S1",
-      "3OT2OD030545-01S5"
+      "3OT2OD030545-01S2"
     ],
-    "awardAmount": 3089131,
+    "awardAmount": 2404624,
     "publications": 4,
     "repos": 0,
     "analytics": 0
@@ -101,6 +100,18 @@
     ],
     "awardAmount": 318000,
     "publications": 2,
+    "repos": 0,
+    "analytics": 0
+  },
+  {
+    "id": "R03OD038393",
+    "name": "GeneSight: Advancing Insights into Complex Genetic Traits through CFDE-Enhanced Knowledge Graphs",
+    "activityCode": "R03",
+    "projects": [
+      "1R03OD038393-01"
+    ],
+    "awardAmount": 311000,
+    "publications": 0,
     "repos": 0,
     "analytics": 0
   },
@@ -273,6 +284,18 @@
     "analytics": 0
   },
   {
+    "id": "R03OD038388",
+    "name": "Synergizing Common Fund Data from MoTrPAC and LINCS for the Discovery of Novel Exercise Mimetic Drugs",
+    "activityCode": "R03",
+    "projects": [
+      "1R03OD038388-01"
+    ],
+    "awardAmount": 308800,
+    "publications": 0,
+    "repos": 0,
+    "analytics": 0
+  },
+  {
     "id": "OT2OD030546",
     "name": "Illuminating the Druggable Genome Data Coordinating Center - Engagement Plan with the CFDE",
     "activityCode": "OT2",
@@ -308,6 +331,18 @@
     ],
     "awardAmount": 311000,
     "publications": 4,
+    "repos": 0,
+    "analytics": 0
+  },
+  {
+    "id": "R03OD038392",
+    "name": "Common Fund Gene Utility Compendium: A Systems Biology Resource to Explore Tissue-Specific Functional Genes and Druggable Genomes",
+    "activityCode": "R03",
+    "projects": [
+      "1R03OD038392-01"
+    ],
+    "awardAmount": 322800,
+    "publications": 0,
     "repos": 0,
     "analytics": 0
   },
@@ -384,15 +419,27 @@
     "analytics": 0
   },
   {
+    "id": "R03OD038390",
+    "name": "Ultra-high resolution 3D genome maps for multiple human tissues",
+    "activityCode": "R03",
+    "projects": [
+      "1R03OD038390-01"
+    ],
+    "awardAmount": 308658,
+    "publications": 0,
+    "repos": 0,
+    "analytics": 0
+  },
+  {
     "id": "OT2OD030160",
     "name": "The LINCS DCIC Engagement Plan with the CFDE",
     "activityCode": "OT2",
     "projects": [
-      "1OT2OD030160-01",
       "3OT2OD030160-01S2",
+      "1OT2OD030160-01",
       "3OT2OD030160-01S3",
-      "3OT2OD030160-01S4",
-      "3OT2OD030160-01S1"
+      "3OT2OD030160-01S1",
+      "3OT2OD030160-01S4"
     ],
     "awardAmount": 3120175,
     "publications": 13,
@@ -541,6 +588,18 @@
     "analytics": 0
   },
   {
+    "id": "R03OD038386",
+    "name": "Variant impact prediction on Common Fund data sets towards drug repurposing for rare genetic diseases",
+    "activityCode": "R03",
+    "projects": [
+      "1R03OD038386-01"
+    ],
+    "awardAmount": 338000,
+    "publications": 0,
+    "repos": 0,
+    "analytics": 0
+  },
+  {
     "id": "OT2OD030162",
     "name": "Kids First Data Resource Center (KFDRC): Harnessing Data-Driven Opportunities in the Present on behalf of the Future of Common Fund Data Ecosystem (CFDE)",
     "activityCode": "OT2",
@@ -591,7 +650,7 @@
       "3OT2OD030544-01S2"
     ],
     "awardAmount": 2930832,
-    "publications": 31,
+    "publications": 33,
     "repos": 0,
     "analytics": 0
   },
@@ -603,6 +662,30 @@
       "1R03OD030600-01"
     ],
     "awardAmount": 363306,
+    "publications": 0,
+    "repos": 0,
+    "analytics": 0
+  },
+  {
+    "id": "R03OD038391",
+    "name": "Leveraging Heterogenous Common Fund Data Sets and Beyond for Identifying Lung Cancer Subtypes",
+    "activityCode": "R03",
+    "projects": [
+      "1R03OD038391-01"
+    ],
+    "awardAmount": 307000,
+    "publications": 0,
+    "repos": 0,
+    "analytics": 0
+  },
+  {
+    "id": "R03OD038389",
+    "name": "Toward Deep Learning Techniques for Cell-Type and Spatial Resolution Estimation of Regulatory Networks",
+    "activityCode": "R03",
+    "projects": [
+      "1R03OD038389-01"
+    ],
+    "awardAmount": 290326,
     "publications": 0,
     "repos": 0,
     "analytics": 0
