--- a/data/output/projects.json
+++ b/data/output/projects.json
@@ -100,7 +100,7 @@
     "activityCode": "OT2",
     "agencyCode": "NIH",
     "dateStart": "2020-09-25T12:09:00Z",
-    "dateEnd": "2024-09-24T12:09:00Z",
+    "dateEnd": "2025-09-24T12:09:00Z",
     "isActive": 1
   },
   {
@@ -130,19 +130,6 @@
     "isActive": 0
   },
   {
-    "id": "3OT2OD030545-01S2",
-    "coreProject": "OT2OD030545",
-    "name": "Amplifying the Value of HuBMAP Data Through Data Interoperability and Collaboration",
-    "opportunity": "OTA-20-005",
-    "application": 10468526,
-    "awardAmount": 500000,
-    "activityCode": "OT2",
-    "agencyCode": "NIH",
-    "dateStart": "2020-09-25T12:09:00Z",
-    "dateEnd": "2022-09-24T12:09:00Z",
-    "isActive": 0
-  },
-  {
     "id": "3OT2OD030545-01S1",
     "coreProject": "OT2OD030545",
     "name": "Amplifying the Value of HuBMAP Data Through Data Interoperability and Collaboration",
@@ -156,17 +143,17 @@
     "isActive": 0
   },
   {
-    "id": "3OT2OD030545-01S5",
+    "id": "3OT2OD030545-01S2",
     "coreProject": "OT2OD030545",
     "name": "Amplifying the Value of HuBMAP Data Through Data Interoperability and Collaboration",
     "opportunity": "OTA-20-005",
-    "application": 10907962,
-    "awardAmount": 684507,
+    "application": 10468526,
+    "awardAmount": 500000,
     "activityCode": "OT2",
     "agencyCode": "NIH",
     "dateStart": "2020-09-25T12:09:00Z",
-    "dateEnd": "2024-09-24T12:09:00Z",
-    "isActive": 1
+    "dateEnd": "2022-09-24T12:09:00Z",
+    "isActive": 0
   },
   {
     "id": "1R03OD030596-01",
@@ -218,6 +205,19 @@
     "agencyCode": "NIH",
     "dateStart": "2023-09-20T12:09:00Z",
     "dateEnd": "2024-09-19T12:09:00Z",
+    "isActive": 1
+  },
+  {
+    "id": "1R03OD038393-01",
+    "coreProject": "R03OD038393",
+    "name": "GeneSight: Advancing Insights into Complex Genetic Traits through CFDE-Enhanced Knowledge Graphs",
+    "opportunity": "RFA-RM-23-015",
+    "application": 10990226,
+    "awardAmount": 311000,
+    "activityCode": "R03",
+    "agencyCode": "NIH",
+    "dateStart": "2024-09-05T12:09:00Z",
+    "dateEnd": "2025-09-04T12:09:00Z",
     "isActive": 1
   },
   {
@@ -403,6 +403,19 @@
     "isActive": 0
   },
   {
+    "id": "1R03OD038388-01",
+    "coreProject": "R03OD038388",
+    "name": "Synergizing Common Fund Data from MoTrPAC and LINCS for the Discovery of Novel Exercise Mimetic Drugs",
+    "opportunity": "RFA-RM-23-015",
+    "application": 10989418,
+    "awardAmount": 308800,
+    "activityCode": "R03",
+    "agencyCode": "NIH",
+    "dateStart": "2024-09-05T12:09:00Z",
+    "dateEnd": "2025-09-04T12:09:00Z",
+    "isActive": 1
+  },
+  {
     "id": "3OT2OD030546-01S2",
     "coreProject": "OT2OD030546",
     "name": "Illuminating the Druggable Genome Data Coordinating Center - Engagement Plan with the CFDE",
@@ -479,6 +492,19 @@
     "dateStart": "2021-09-22T12:09:00Z",
     "dateEnd": "2023-09-21T12:09:00Z",
     "isActive": 0
+  },
+  {
+    "id": "1R03OD038392-01",
+    "coreProject": "R03OD038392",
+    "name": "Common Fund Gene Utility Compendium: A Systems Biology Resource to Explore Tissue-Specific Functional Genes and Druggable Genomes",
+    "opportunity": "RFA-RM-23-015",
+    "application": 10983541,
+    "awardAmount": 322800,
+    "activityCode": "R03",
+    "agencyCode": "NIH",
+    "dateStart": "2024-09-05T12:09:00Z",
+    "dateEnd": "2025-09-04T12:09:00Z",
+    "isActive": 1
   },
   {
     "id": "1R03OD034496-01",
@@ -559,16 +585,16 @@
     "isActive": 0
   },
   {
-    "id": "1OT2OD030160-01",
-    "coreProject": "OT2OD030160",
-    "name": "The LINCS DCIC Engagement Plan with the CFDE",
-    "opportunity": "OTA-20-005",
-    "application": 10128125,
-    "awardAmount": 508500,
-    "activityCode": "OT2",
+    "id": "1R03OD038390-01",
+    "coreProject": "R03OD038390",
+    "name": "Ultra-high resolution 3D genome maps for multiple human tissues",
+    "opportunity": "RFA-RM-23-015",
+    "application": 10986325,
+    "awardAmount": 308658,
+    "activityCode": "R03",
     "agencyCode": "NIH",
-    "dateStart": "2020-09-23T12:09:00Z",
-    "dateEnd": "2025-09-22T12:09:00Z",
+    "dateStart": "2024-09-05T12:09:00Z",
+    "dateEnd": "2025-09-04T12:09:00Z",
     "isActive": 1
   },
   {
@@ -585,6 +611,19 @@
     "isActive": 0
   },
   {
+    "id": "1OT2OD030160-01",
+    "coreProject": "OT2OD030160",
+    "name": "The LINCS DCIC Engagement Plan with the CFDE",
+    "opportunity": "OTA-20-005",
+    "application": 10128125,
+    "awardAmount": 508500,
+    "activityCode": "OT2",
+    "agencyCode": "NIH",
+    "dateStart": "2020-09-23T12:09:00Z",
+    "dateEnd": "2025-09-22T12:09:00Z",
+    "isActive": 1
+  },
+  {
     "id": "3OT2OD030160-01S3",
     "coreProject": "OT2OD030160",
     "name": "The LINCS DCIC Engagement Plan with the CFDE",
@@ -595,6 +634,19 @@
     "agencyCode": "NIH",
     "dateStart": "2020-09-23T12:09:00Z",
     "dateEnd": "2023-09-22T12:09:00Z",
+    "isActive": 0
+  },
+  {
+    "id": "3OT2OD030160-01S1",
+    "coreProject": "OT2OD030160",
+    "name": "The LINCS DCIC Engagement Plan with the CFDE",
+    "opportunity": "OTA-20-005",
+    "application": 10444350,
+    "awardAmount": 210000,
+    "activityCode": "OT2",
+    "agencyCode": "NIH",
+    "dateStart": "2020-09-23T12:09:00Z",
+    "dateEnd": "2022-09-22T12:09:00Z",
     "isActive": 0
   },
   {
@@ -622,19 +674,6 @@
     "dateStart": "2020-09-23T12:09:00Z",
     "dateEnd": "2024-09-22T12:09:00Z",
     "isActive": 1
-  },
-  {
-    "id": "3OT2OD030160-01S1",
-    "coreProject": "OT2OD030160",
-    "name": "The LINCS DCIC Engagement Plan with the CFDE",
-    "opportunity": "OTA-20-005",
-    "application": 10444350,
-    "awardAmount": 210000,
-    "activityCode": "OT2",
-    "agencyCode": "NIH",
-    "dateStart": "2020-09-23T12:09:00Z",
-    "dateEnd": "2022-09-22T12:09:00Z",
-    "isActive": 0
   },
   {
     "id": "1R03OD032627-01",
@@ -802,7 +841,7 @@
     "activityCode": "R03",
     "agencyCode": "NIH",
     "dateStart": "2023-09-20T12:09:00Z",
-    "dateEnd": "2024-09-19T12:09:00Z",
+    "dateEnd": "2025-09-19T12:09:00Z",
     "isActive": 1
   },
   {
@@ -881,6 +920,19 @@
     "agencyCode": "NIH",
     "dateStart": "2021-09-17T12:09:00Z",
     "dateEnd": "2024-09-16T12:09:00Z",
+    "isActive": 1
+  },
+  {
+    "id": "1R03OD038386-01",
+    "coreProject": "R03OD038386",
+    "name": "Variant impact prediction on Common Fund data sets towards drug repurposing for rare genetic diseases",
+    "opportunity": "RFA-RM-23-015",
+    "application": 10988576,
+    "awardAmount": 338000,
+    "activityCode": "R03",
+    "agencyCode": "NIH",
+    "dateStart": "2024-09-05T12:09:00Z",
+    "dateEnd": "2025-09-04T12:09:00Z",
     "isActive": 1
   },
   {
@@ -1038,6 +1090,32 @@
     "dateStart": "2020-09-18T12:09:00Z",
     "dateEnd": "2023-08-31T12:08:00Z",
     "isActive": 0
+  },
+  {
+    "id": "1R03OD038391-01",
+    "coreProject": "R03OD038391",
+    "name": "Leveraging Heterogenous Common Fund Data Sets and Beyond for Identifying Lung Cancer Subtypes",
+    "opportunity": "RFA-RM-23-015",
+    "application": 10990280,
+    "awardAmount": 307000,
+    "activityCode": "R03",
+    "agencyCode": "NIH",
+    "dateStart": "2024-09-05T12:09:00Z",
+    "dateEnd": "2025-09-04T12:09:00Z",
+    "isActive": 1
+  },
+  {
+    "id": "1R03OD038389-01",
+    "coreProject": "R03OD038389",
+    "name": "Toward Deep Learning Techniques for Cell-Type and Spatial Resolution Estimation of Regulatory Networks",
+    "opportunity": "RFA-RM-23-015",
+    "application": 10988806,
+    "awardAmount": 290326,
+    "activityCode": "R03",
+    "agencyCode": "NIH",
+    "dateStart": "2024-09-05T12:09:00Z",
+    "dateEnd": "2025-09-04T12:09:00Z",
+    "isActive": 1
   },
   {
     "id": "1R03OD034501-01",
