--- a/.github/actions/install-playwright/action.yaml
+++ b/.github/actions/install-playwright/action.yaml
@@ -20,14 +20,27 @@ runs:
   using: composite
   steps:
     - name: Get Playwright version
+      uses: actions/github-script@v7
       id: version
-      shell: bash
-      working-directory: ${{ inputs.working-directory }}
-      run: |
-        VERSION=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//')
-        echo "Version: $VERSION"
-        echo "PLAYWRIGHT_VERSION=$VERSION" >> $GITHUB_ENV
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
+      with:
+        script: |
+          // https://github.com/actions/toolkit/issues/1624
+          // const workingDirectory = core.getInput("working-directory");
+          const workingDirectory = "${{ inputs.working-directory }}";
+          console.debug("Specified working directory:", workingDirectory);
+          process.chdir(workingDirectory);
+          console.debug("Actual working directory:", process.cwd());
+          let version = "";
+          try {
+            version = require("@playwright/test/package.json").version;
+          } catch (error) {
+            console.log(error.message);
+          }
+          console.debug("Version:", version);
+          if (version) {
+            core.exportVariable("PLAYWRIGHT_VERSION", version);
+            core.setOutput("version", version);
+          } else core.setFailed("Couldn't get Playwright version");
 
     - name: Cache Playwright
       id: cache
