--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -61,6 +61,7 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Update compiled data
+          commit_author: "Bot <>"
 
       # - name: Open pull request
       #   uses: peter-evans/create-pull-request@v6
