--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.21",
     "vue": "^3.4.34",
     "vue-echarts": "^6.7.3",
+    "vue-gtag": "^2.0.1",
     "vue-router": "4.4.0"
   },
   "devDependencies": {
