--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/vue-table": "^8.19.3",
     "@vueuse/core": "^10.11.0",
+    "date-fns": "^4.1.0",
     "echarts": "^5.5.1",
     "javascript-time-ago": "^2.5.10",
     "lodash": "^4.17.21",
