--- a/app/package.json
+++ b/app/package.json
@@ -11,39 +11,38 @@
     "clean": "rm -rf node_modules bun.lockb && bun pm cache rm"
   },
   "dependencies": {
-    "@tanstack/vue-table": "^8.19.3",
-    "@vueuse/core": "^10.11.0",
+    "@tanstack/vue-table": "^8.20.5",
+    "@vueuse/core": "^10.11.1",
     "date-fns": "^4.1.0",
     "echarts": "^5.5.1",
-    "javascript-time-ago": "^2.5.10",
+    "javascript-time-ago": "^2.5.11",
     "lodash": "^4.17.21",
-    "vue": "^3.4.34",
+    "vue": "^3.5.13",
     "vue-echarts": "^6.7.3",
     "vue-gtag": "^2.0.1",
-    "vue-router": "4.4.0"
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.8.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "9.14.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@types/echarts": "^4.9.22",
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^22.0.0",
-    "@vitejs/plugin-vue": "^5.1.1",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^22.10.0",
+    "@vitejs/plugin-vue": "^5.2.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "eslint": "^9.8.0",
-    "eslint-plugin-vue": "^9.27.0",
+    "eslint-plugin-vue": "^9.31.0",
     "eslint-plugin-vuejs-accessibility": "^2.4.1",
-    "postcss": "^8.4.40",
-    "prettier": "^3.3.3",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.0",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-jsdoc": "^1.3.0",
-    "type-fest": "^4.25.0",
-    "typescript": "^5.5.4",
-    "vite": "^5.3.5",
+    "type-fest": "^4.28.0",
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.0.29"
+    "vue-tsc": "^2.1.10"
   }
 }
