--- a/data/package.json
+++ b/data/package.json
@@ -14,34 +14,33 @@
   },
   "dependencies": {
     "@google-analytics/admin": "^7.6.0",
-    "@google-analytics/data": "^4.8.0",
-    "@playwright/test": "^1.45.3",
-    "@zip.js/zip.js": "^2.7.52",
+    "@google-analytics/data": "^4.11.0",
+    "@playwright/test": "^1.49.0",
+    "@zip.js/zip.js": "^2.7.53",
     "chalk": "^5.3.0",
-    "csv": "^6.3.10",
+    "csv": "^6.3.11",
     "lodash-es": "^4.17.21",
     "nodejs-file-downloader": "^4.13.0",
     "octokit": "^4.0.2",
-    "pdfjs-dist": "^4.5.136",
-    "prettier": "^3.3.3",
+    "pdfjs-dist": "4.8.69",
+    "prettier": "3.4.0",
     "strip-ansi": "^7.1.0",
-    "tsx": "^4.16.2"
+    "tsx": "4.19.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.8.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "9.14.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@octokit/graphql-schema": "^15.25.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.0.0",
+    "@types/node": "^22.10.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^9.8.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier-plugin-jsdoc": "^1.3.0",
-    "type-fest": "^4.25.0",
-    "typescript": "^5.5.4"
+    "type-fest": "^4.28.0",
+    "typescript": "^5.7.2"
   },
   "overrides": {
     "canvas": "../_EXCLUDED_"
