--- a/app/package.json
+++ b/app/package.json
@@ -40,7 +40,7 @@
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-jsdoc": "^1.3.0",
     "type-fest": "^4.28.0",
-    "typescript": "^5.7.2",
+    "typescript": "5.6.2",
     "vite": "^5.4.11",
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.1.10"
