re-run pipeline, update notes about cache

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -5,7 +5,7 @@ on:
     inputs:
       cache:
         type: boolean
-        description: Use cache (files in /raw)
+        description: Use cache
         default: false
 
   schedule:
