--- a/data/output/projects.json
+++ b/data/output/projects.json
@@ -39,6 +39,19 @@
     "isActive": 0
   },
   {
+    "id": "1OT2OD030161-01",
+    "coreProject": "OT2OD030161",
+    "name": "GTEx engagement with the CFDE-CC and other DCCs towards building a data ecosystem spanning the Common Fund projects",
+    "opportunity": "OTA-20-005",
+    "application": 10129013,
+    "awardAmount": 556197,
+    "activityCode": "OT2",
+    "agencyCode": "NIH",
+    "dateStart": "2020-09-23T12:09:00Z",
+    "dateEnd": "2025-09-22T12:09:00Z",
+    "isActive": 1
+  },
+  {
     "id": "3OT2OD030161-01S3",
     "coreProject": "OT2OD030161",
     "name": "GTEx engagement with the CFDE-CC and other DCCs towards building a data ecosystem spanning the Common Fund projects",
@@ -63,19 +76,6 @@
     "dateStart": "2020-09-23T12:09:00Z",
     "dateEnd": "2024-09-22T12:09:00Z",
     "isActive": 0
-  },
-  {
-    "id": "1OT2OD030161-01",
-    "coreProject": "OT2OD030161",
-    "name": "GTEx engagement with the CFDE-CC and other DCCs towards building a data ecosystem spanning the Common Fund projects",
-    "opportunity": "OTA-20-005",
-    "application": 10129013,
-    "awardAmount": 556197,
-    "activityCode": "OT2",
-    "agencyCode": "NIH",
-    "dateStart": "2020-09-23T12:09:00Z",
-    "dateEnd": "2025-09-22T12:09:00Z",
-    "isActive": 1
   },
   {
     "id": "3OT2OD030161-01S5",
@@ -104,6 +104,19 @@
     "isActive": 0
   },
   {
+    "id": "1R25OD039836-01",
+    "coreProject": "R25OD039836",
+    "name": "FREEMIND: Focused Research Education and Experience using Multimodal and Interdisciplinary NIH Datasets",
+    "opportunity": "RFA-RM-23-014",
+    "application": 11034526,
+    "awardAmount": 284459,
+    "activityCode": "R25",
+    "agencyCode": "NIH",
+    "dateStart": "2025-03-11T12:03:00Z",
+    "dateEnd": "2027-12-31T12:12:00Z",
+    "isActive": 1
+  },
+  {
     "id": "1OT2OD030545-01",
     "coreProject": "OT2OD030545",
     "name": "Amplifying the Value of HuBMAP Data Through Data Interoperability and Collaboration",
@@ -117,12 +130,12 @@
     "isActive": 1
   },
   {
-    "id": "3OT2OD030545-01S3",
+    "id": "3OT2OD030545-01S4",
     "coreProject": "OT2OD030545",
     "name": "Amplifying the Value of HuBMAP Data Through Data Interoperability and Collaboration",
     "opportunity": "OTA-20-005",
-    "application": 10683509,
-    "awardAmount": 554624,
+    "application": 10707603,
+    "awardAmount": 700000,
     "activityCode": "OT2",
     "agencyCode": "NIH",
     "dateStart": "2020-09-25T12:09:00Z",
@@ -130,12 +143,12 @@
     "isActive": 0
   },
   {
-    "id": "3OT2OD030545-01S4",
+    "id": "3OT2OD030545-01S3",
     "coreProject": "OT2OD030545",
     "name": "Amplifying the Value of HuBMAP Data Through Data Interoperability and Collaboration",
     "opportunity": "OTA-20-005",
-    "application": 10707603,
-    "awardAmount": 700000,
+    "application": 10683509,
+    "awardAmount": 554624,
     "activityCode": "OT2",
     "agencyCode": "NIH",
     "dateStart": "2020-09-25T12:09:00Z",
@@ -559,19 +572,6 @@
     "isActive": 1
   },
   {
-    "id": "3OT2OD030546-01S1",
-    "coreProject": "OT2OD030546",
-    "name": "Illuminating the Druggable Genome Data Coordinating Center - Engagement Plan with the CFDE",
-    "opportunity": "OTA-20-005",
-    "application": 10468527,
-    "awardAmount": 745261,
-    "activityCode": "OT2",
-    "agencyCode": "NIH",
-    "dateStart": "2020-09-23T12:09:00Z",
-    "dateEnd": "2023-09-22T12:09:00Z",
-    "isActive": 0
-  },
-  {
     "id": "1OT2OD030546-01",
     "coreProject": "OT2OD030546",
     "name": "Illuminating the Druggable Genome Data Coordinating Center - Engagement Plan with the CFDE",
@@ -583,6 +583,19 @@
     "dateStart": "2020-09-23T12:09:00Z",
     "dateEnd": "2025-09-22T12:09:00Z",
     "isActive": 1
+  },
+  {
+    "id": "3OT2OD030546-01S1",
+    "coreProject": "OT2OD030546",
+    "name": "Illuminating the Druggable Genome Data Coordinating Center - Engagement Plan with the CFDE",
+    "opportunity": "OTA-20-005",
+    "application": 10468527,
+    "awardAmount": 745261,
+    "activityCode": "OT2",
+    "agencyCode": "NIH",
+    "dateStart": "2020-09-23T12:09:00Z",
+    "dateEnd": "2023-09-22T12:09:00Z",
+    "isActive": 0
   },
   {
     "id": "3OT2OD030546-01S3",
@@ -780,19 +793,6 @@
     "isActive": 1
   },
   {
-    "id": "3OT2OD030160-01S1",
-    "coreProject": "OT2OD030160",
-    "name": "The LINCS DCIC Engagement Plan with the CFDE",
-    "opportunity": "OTA-20-005",
-    "application": 10444350,
-    "awardAmount": 210000,
-    "activityCode": "OT2",
-    "agencyCode": "NIH",
-    "dateStart": "2020-09-23T12:09:00Z",
-    "dateEnd": "2022-09-22T12:09:00Z",
-    "isActive": 0
-  },
-  {
     "id": "3OT2OD030160-01S3",
     "coreProject": "OT2OD030160",
     "name": "The LINCS DCIC Engagement Plan with the CFDE",
@@ -806,16 +806,16 @@
     "isActive": 0
   },
   {
-    "id": "3OT2OD030160-01S4",
+    "id": "3OT2OD030160-01S1",
     "coreProject": "OT2OD030160",
     "name": "The LINCS DCIC Engagement Plan with the CFDE",
     "opportunity": "OTA-20-005",
-    "application": 10837964,
-    "awardAmount": 1028946,
+    "application": 10444350,
+    "awardAmount": 210000,
     "activityCode": "OT2",
     "agencyCode": "NIH",
     "dateStart": "2020-09-23T12:09:00Z",
-    "dateEnd": "2024-09-22T12:09:00Z",
+    "dateEnd": "2022-09-22T12:09:00Z",
     "isActive": 0
   },
   {
@@ -830,6 +830,19 @@
     "dateStart": "2023-09-18T12:09:00Z",
     "dateEnd": "2028-09-17T12:09:00Z",
     "isActive": 1
+  },
+  {
+    "id": "3OT2OD030160-01S4",
+    "coreProject": "OT2OD030160",
+    "name": "The LINCS DCIC Engagement Plan with the CFDE",
+    "opportunity": "OTA-20-005",
+    "application": 10837964,
+    "awardAmount": 1028946,
+    "activityCode": "OT2",
+    "agencyCode": "NIH",
+    "dateStart": "2020-09-23T12:09:00Z",
+    "dateEnd": "2024-09-22T12:09:00Z",
+    "isActive": 0
   },
   {
     "id": "1R03OD032627-01",
@@ -1144,12 +1157,12 @@
     "isActive": 1
   },
   {
-    "id": "3OT2OD030162-01S3",
+    "id": "3OT2OD030162-01S1",
     "coreProject": "OT2OD030162",
     "name": "Kids First Data Resource Center (KFDRC): Harnessing Data-Driven Opportunities in the Present on behalf of the Future of Common Fund Data Ecosystem (CFDE)",
     "opportunity": "OTA-20-005",
-    "application": 10683508,
-    "awardAmount": 3224707,
+    "application": 10444365,
+    "awardAmount": 357776,
     "activityCode": "OT2",
     "agencyCode": "NIH",
     "dateStart": "2020-09-25T12:09:00Z",
@@ -1157,12 +1170,12 @@
     "isActive": 0
   },
   {
-    "id": "3OT2OD030162-01S1",
+    "id": "3OT2OD030162-01S3",
     "coreProject": "OT2OD030162",
     "name": "Kids First Data Resource Center (KFDRC): Harnessing Data-Driven Opportunities in the Present on behalf of the Future of Common Fund Data Ecosystem (CFDE)",
     "opportunity": "OTA-20-005",
-    "application": 10444365,
-    "awardAmount": 357776,
+    "application": 10683508,
+    "awardAmount": 3224707,
     "activityCode": "OT2",
     "agencyCode": "NIH",
     "dateStart": "2020-09-25T12:09:00Z",
@@ -1183,19 +1196,6 @@
     "isActive": 0
   },
   {
-    "id": "3OT2OD030162-01S4",
-    "coreProject": "OT2OD030162",
-    "name": "Kids First Data Resource Center (KFDRC): Harnessing Data-Driven Opportunities in the Present on behalf of the Future of Common Fund Data Ecosystem (CFDE)",
-    "opportunity": "OTA-20-005",
-    "application": 10907061,
-    "awardAmount": 2593513,
-    "activityCode": "OT2",
-    "agencyCode": "NIH",
-    "dateStart": "2020-09-25T12:09:00Z",
-    "dateEnd": "2024-09-24T12:09:00Z",
-    "isActive": 0
-  },
-  {
     "id": "1OT2OD030162-01",
     "coreProject": "OT2OD030162",
     "name": "Kids First Data Resource Center (KFDRC): Harnessing Data-Driven Opportunities in the Present on behalf of the Future of Common Fund Data Ecosystem (CFDE)",
@@ -1207,6 +1207,19 @@
     "dateStart": "2020-09-25T12:09:00Z",
     "dateEnd": "2025-09-24T12:09:00Z",
     "isActive": 1
+  },
+  {
+    "id": "3OT2OD030162-01S4",
+    "coreProject": "OT2OD030162",
+    "name": "Kids First Data Resource Center (KFDRC): Harnessing Data-Driven Opportunities in the Present on behalf of the Future of Common Fund Data Ecosystem (CFDE)",
+    "opportunity": "OTA-20-005",
+    "application": 10907061,
+    "awardAmount": 2593513,
+    "activityCode": "OT2",
+    "agencyCode": "NIH",
+    "dateStart": "2020-09-25T12:09:00Z",
+    "dateEnd": "2024-09-24T12:09:00Z",
+    "isActive": 0
   },
   {
     "id": "3OT2OD030162-01S5",
@@ -1261,6 +1274,19 @@
     "isActive": 0
   },
   {
+    "id": "1OT2OD030544-01",
+    "coreProject": "OT2OD030544",
+    "name": "Biomedical Data Commons Workbench (BDCW)",
+    "opportunity": "OTA-20-005",
+    "application": 10217619,
+    "awardAmount": 500000,
+    "activityCode": "OT2",
+    "agencyCode": "NIH",
+    "dateStart": "2020-09-23T12:09:00Z",
+    "dateEnd": "2025-09-22T12:09:00Z",
+    "isActive": 1
+  },
+  {
     "id": "3OT2OD030544-01S1",
     "coreProject": "OT2OD030544",
     "name": "Biomedical Data Commons Workbench (BDCW)",
@@ -1285,19 +1311,6 @@
     "dateStart": "2020-09-23T12:09:00Z",
     "dateEnd": "2024-09-22T12:09:00Z",
     "isActive": 0
-  },
-  {
-    "id": "1OT2OD030544-01",
-    "coreProject": "OT2OD030544",
-    "name": "Biomedical Data Commons Workbench (BDCW)",
-    "opportunity": "OTA-20-005",
-    "application": 10217619,
-    "awardAmount": 500000,
-    "activityCode": "OT2",
-    "agencyCode": "NIH",
-    "dateStart": "2020-09-23T12:09:00Z",
-    "dateEnd": "2025-09-22T12:09:00Z",
-    "isActive": 1
   },
   {
     "id": "1U24OD038425-01",
