--- a/app/package.json
+++ b/app/package.json
@@ -4,45 +4,45 @@
     "dev": "vite --open",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --fix && prettier **/*.{ts,vue,css,html,md} --write",
-    "test:lint": "eslint . && prettier **/*.{ts,vue,css,html,md} --check",
+    "lint": "eslint . --fix",
+    "test:lint": "eslint .",
     "test:types": "vue-tsc",
     "test": "npm run test:lint && npm run test:types",
     "clean": "rm -rf node_modules bun.lockb && bun pm cache rm"
   },
   "dependencies": {
-    "@tanstack/vue-table": "^8.20.5",
-    "@vueuse/core": "^10.11.1",
+    "@tanstack/vue-table": "^8.21.2",
+    "@vueuse/core": "^13.0.0",
     "date-fns": "^4.1.0",
-    "echarts": "^5.5.1",
+    "echarts": "^5.6.0",
     "javascript-time-ago": "^2.5.11",
     "lodash": "^4.17.21",
     "vue": "^3.5.13",
-    "vue-echarts": "^6.7.3",
-    "vue-gtag": "^2.0.1",
-    "vue-router": "^4.4.0"
+    "vue-echarts": "^7.0.3",
+    "vue-gtag": "^2.1.2",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "9.14.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@types/echarts": "^4.9.22",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^22.10.0",
-    "@vitejs/plugin-vue": "^5.2.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
-    "@vue/tsconfig": "^0.5.1",
-    "eslint-plugin-vue": "^9.31.0",
-    "eslint-plugin-vuejs-accessibility": "^2.4.1",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.0",
+    "@eslint/js": "^9.22.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@types/echarts": "^5.0.0",
+    "@types/lodash": "^4.17.16",
+    "@types/node": "^22.13.11",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.5.0",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-vue": "^10.0.0",
+    "postcss": "^8.5.3",
     "prettier-plugin-css-order": "^2.1.2",
-    "prettier-plugin-jsdoc": "^1.3.0",
-    "type-fest": "^4.28.0",
-    "typescript": "5.6.2",
-    "vite": "^5.4.11",
+    "prettier-plugin-jsdoc": "^1.3.2",
+    "type-fest": "^4.37.0",
+    "typescript": "^5.8.2",
+    "vite": "^6.2.2",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.1.10"
+    "vue-tsc": "^2.2.8"
   }
 }
