--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,31 +1,24 @@
 {
-  "extends": ["@vue/tsconfig/tsconfig.json"],
   "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
-    "noErrorTruncation": true,
-
-    /* Bundler mode */
-    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "resolveJsonModule": true,
     "isolatedModules": true,
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "noEmit": true,
-    "jsx": "preserve",
-
-    /* Linting */
-    "strict": true,
+    "noErrorTruncation": true,
     "noUncheckedIndexedAccess": true,
-    "verbatimModuleSyntax": true,
-
     "paths": {
       "@/*": ["./src/*"],
       "~/*": ["../data/output/*"]
-    }
+    },
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "verbatimModuleSyntax": true
   },
-  "include": ["src/**/*.ts", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "extends": ["@vue/tsconfig/tsconfig.json"],
+  "include": ["src/**/*.ts", "src/**/*.vue"]
 }
