--- a/data/package.json
+++ b/data/package.json
@@ -3,44 +3,43 @@
   "scripts": {
     "install-playwright": "npx playwright install chromium --with-deps",
     "script": "tsx --env-file-if-exists=.env --env-file-if-exists=.env.local",
-    "ingest": "npm run script -- ./ingest.ts",
+    "gather": "npm run script -- ./gather.ts",
     "print": "npm run script -- ./print.ts",
-    "lint": "eslint . --fix && prettier **/*.{ts,md} --write",
-    "test:lint": "eslint . && prettier **/*.{ts,md} --check",
+    "lint": "eslint . --fix",
+    "test:lint": "eslint .",
     "test:types": "tsc --noEmit",
     "test:e2e": "playwright test",
     "test": "npm run test:lint && npm run test:types && npm run test:e2e",
     "clean": "rm -rf node_modules bun.lockb && bun pm cache rm"
   },
   "dependencies": {
-    "@google-analytics/admin": "^7.6.0",
-    "@google-analytics/data": "^4.11.0",
-    "@playwright/test": "^1.49.0",
-    "@zip.js/zip.js": "^2.7.53",
-    "chalk": "^5.3.0",
+    "@google-analytics/admin": "^8.1.0",
+    "@google-analytics/data": "^5.1.0",
+    "@playwright/test": "^1.51.1",
+    "@zip.js/zip.js": "^2.7.57",
+    "chalk": "^5.4.1",
     "csv": "^6.3.11",
     "lodash-es": "^4.17.21",
     "nodejs-file-downloader": "^4.13.0",
-    "octokit": "^4.0.2",
-    "pdfjs-dist": "4.8.69",
-    "prettier": "3.4.0",
+    "octokit": "^4.1.2",
+    "pdfjs-dist": "5.0.375",
+    "prettier": "3.5.3",
     "strip-ansi": "^7.1.0",
-    "tsx": "4.19.2"
+    "tsx": "4.19.3"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "9.14.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@octokit/graphql-schema": "^15.25.0",
-    "@tsconfig/node22": "^22.0.0",
+    "@eslint/js": "^9.22.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+    "@octokit/graphql-schema": "^15.26.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.10.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "prettier-plugin-jsdoc": "^1.3.0",
-    "type-fest": "^4.28.0",
-    "typescript": "^5.7.2"
+    "@types/node": "^22.13.11",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier-plugin-jsdoc": "^1.3.2",
+    "type-fest": "^4.37.0",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
   },
   "overrides": {
     "canvas": "../_EXCLUDED_"
