--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -50,7 +50,7 @@ jobs:
           credentials_json: ${{ secrets.AUTH_GOOGLE }}
 
       - name: Run pipeline
-        run: xvfb-run ./run.sh --ingest
+        run: xvfb-run ./run.sh --gather
         env:
           AUTH_ENTREZ: ${{ secrets.AUTH_ENTREZ }}
           AUTH_GITHUB: ${{ secrets.AUTH_GITHUB }}
@@ -60,11 +60,5 @@ jobs:
       - name: Commit results
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: Update compiled data
+          commit_message: Update files
           commit_author: "Bot <>"
-
-      # - name: Open pull request
-      #   uses: peter-evans/create-pull-request@v6
-      #   with:
-      #     branch: update-data
-      #     title: Update compiled data
