remove bespoke playwright install action

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -43,9 +43,8 @@ jobs:
         run: ./run.sh --install
 
       - name: Install Playwright
-        uses: ./.github/actions/install-playwright
-        with:
-          working-directory: ./data
+        run: ./run.sh --install-playwright
+        working-directory: ./public
 
       - name: Run pipeline
         run: xvfb-run ./run.sh --gather
