--- a/data/package.json
+++ b/data/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@google-analytics/admin": "^8.1.0",
     "@google-analytics/data": "^5.1.0",
+    "@googleapis/youtube": "^24.0.0",
+    "@googleapis/youtubeanalytics": "^2.0.5",
     "@playwright/test": "^1.51.1",
     "@zip.js/zip.js": "^2.7.57",
     "chalk": "^5.4.1",
