--- a/data/package.json
+++ b/data/package.json
@@ -19,6 +19,8 @@
     "@zip.js/zip.js": "^2.7.57",
     "chalk": "^5.4.1",
     "csv": "^6.3.11",
+    "data-fns": "^1.1.0",
+    "date-fns": "^4.1.0",
     "lodash-es": "^4.17.21",
     "nodejs-file-downloader": "^4.13.0",
     "octokit": "^4.1.2",
